add footer and navbar effect

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <div id="root"></div>
+    <footer
+      class="fixed-bottom d-flex justify-content-center p-3 bg-body-secondary"
+    >
+      <h4 class="inline-block">
+        2023 &lt; Code &gt; De GO Inventory. All Rights Resereved &reg;.
+      </h4>
+    </footer>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
